src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>DSO - DANY Opportunity Sales Process</fullName>
        <description>Direct Sales Office - DANY&apos;s Opportunity Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Abandoned</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contractor Awarded%2FNegotiate</fullName>
        </values>
        <values>
            <fullName>Define Opportunity</fullName>
        </values>
        <values>
            <fullName>Develop Customer Solution%2FProvide Budget Price</fullName>
        </values>
        <values>
            <fullName>Discover Needs</fullName>
        </values>
        <values>
            <fullName>No Bid</fullName>
        </values>
        <values>
            <fullName>Post Bid - Daikin Status Unknown</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote%2FBid</fullName>
        </values>
        <values>
            <fullName>Won - Not Released%2C Not Submitted</fullName>
        </values>
        <values>
            <fullName>Won - Not Released%2C Submitted</fullName>
        </values>
        <values>
            <fullName>Won - Released</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Latin America</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>A-Purchase order received</fullName>
        </values>
        <values>
            <fullName>Abandoned</fullName>
        </values>
        <values>
            <fullName>B-Book in the next 60 days%2Fintent byCust</fullName>
        </values>
        <values>
            <fullName>C-Proposal%2FBid-Daikin Spec%2Fpreferred</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>D-Proposal%2FBid-Not Daikin Specified</fullName>
        </values>
        <values>
            <fullName>E-Project on Hold-Booking beyond 120days</fullName>
        </values>
        <values>
            <fullName>Order-Won-Crdt Release%2C Submittal signed</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>North America</fullName>
        <description>North America Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Abandoned</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Customer Validation</fullName>
        </values>
        <values>
            <fullName>Develop Customer Solution%2FIn Design</fullName>
        </values>
        <values>
            <fullName>Discover Needs</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview%2FPending</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote%2FBid</fullName>
        </values>
        <values>
            <fullName>Qualify Opportunity</fullName>
        </values>
        <values>
            <fullName>Target%2FLead Verification</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>North America - DSO</fullName>
        <description>North America DSO Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Abandoned</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contractor Awarded%2FNegotiate</fullName>
        </values>
        <values>
            <fullName>Define Opportunity</fullName>
        </values>
        <values>
            <fullName>Develop Customer Solution%2FProvide Budget Price</fullName>
        </values>
        <values>
            <fullName>Discover Needs</fullName>
        </values>
        <values>
            <fullName>No Bid</fullName>
        </values>
        <values>
            <fullName>Post Bid - Daikin Status Unknown</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote%2FBid</fullName>
        </values>
        <values>
            <fullName>Won - Not Released%2C Not Submitted</fullName>
        </values>
        <values>
            <fullName>Won - Not Released%2C Submitted</fullName>
        </values>
        <values>
            <fullName>Won - Released</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard Process</fullName>
        <description>Standard sales process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Abandoned</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Customer Validation</fullName>
        </values>
        <values>
            <fullName>Develop Customer Solution%2FIn Design</fullName>
        </values>
        <values>
            <fullName>Discover Needs</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview%2FPending</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview%2FPending-25%25</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview%2FPending-75%25</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview%2FPending-90%25</fullName>
        </values>
        <values>
            <fullName>No Bid</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote%2FBid</fullName>
        </values>
        <values>
            <fullName>Qualify Opportunity</fullName>
        </values>
        <values>
            <fullName>Target%2FLead Verification</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>APTPS_Account_Country_City__c</fullName>
        <description>Used by Opportunity Management X-Author Excel App for the type-ahead lookup field for accounts</description>
        <label>Account-Country-City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASTEA_Contract_Nbr__c</fullName>
        <inlineHelpText>Enter the ASTEA Contract Number for Maintenance Agreement or Renewal</inlineHelpText>
        <label>ASTEA Contract #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__Avalara_Company_Code__c</fullName>
        <inlineHelpText>Avalara Company Code to reference for Tax Calculation for This Opportunity.  If Not populated, uses Default Company Code specified in the currently active TaxNowSettings.</inlineHelpText>
        <label>Avalara Company Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__Avalara_Doc_Code__c</fullName>
        <inlineHelpText>Default Value = Opportunity ID.
This is the invoice number for Avalara.  If the opportunity&apos;s Avalara Status is &quot;Saved&quot;, &quot;Committed&quot;, or &quot;Void&quot;, the invoice with the corresponding Avalara Doc Code can be viewed in the Avalara Dashboard.</inlineHelpText>
        <label>Avalara Doc Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__Avalara_Status__c</fullName>
        <inlineHelpText>Temporary = Opportunity Not Saved to Dashboard
Saved = Opportunity Saved to Dashboard
Committed = Opportunity Committed to Dashboard (Finalized) 
Void = Opportunity Voided in Dashboard
Automatic Tax Calculation Error
Field Value Cannot Be Edited</inlineHelpText>
        <label>Avalara Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__Billing_Address__c</fullName>
        <formula>Account.BillingStreet &amp; BR() &amp; Account.BillingCity &amp; &quot;, &quot; &amp;  Account.BillingState  &amp; &quot; &quot;  &amp;  Account.BillingPostalCode &amp;&quot; &quot;  &amp;  Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If &quot;Use Billing Address&quot; is checked in the currently active TaxNow Settings, this is the address that is used for the destination address for sales tax calculations.</inlineHelpText>
        <label>Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__Billing_County__c</fullName>
        <formula>Account.AVA_SFCORE__Billing_County__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>County of Billing Address</inlineHelpText>
        <label>Billing County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__NonTaxable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is checked, the entire oportunity will be calculated as exempt from tax.

Note:  If Exemption Certificate Management System (ECMS) is enabled, and the Setting is &apos;Required&apos; in your Avalara Dashboard, this checkbox will have no effect.</inlineHelpText>
        <label>Non Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__Opportunity_Date__c</fullName>
        <inlineHelpText>Default value is current date.  This is the invoice date for reporting purposes, and if the tax date is not entered, also the tax date.</inlineHelpText>
        <label>Opportunity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__Sales_Tax__c</fullName>
        <inlineHelpText>Sum of Line Item Sales Tax Amounts, not including S&amp;H</inlineHelpText>
        <label>Sales Tax</label>
        <summarizedField>OpportunityLineItem.AVA_SFCORE__LineTax__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__ShippingAddress__c</fullName>
        <formula>Account.ShippingStreet &amp; BR() &amp; Account.ShippingCity &amp; &quot;, &quot; &amp;  Account.ShippingState  &amp; &quot; &quot;  &amp;  Account.ShippingPostalCode &amp;&quot; &quot; &amp; Account.ShippingCountry</formula>
        <inlineHelpText>Account Shipping Address Used for destination in Sales Tax Calculations unless Use Billing Address is checked in TaxNowSettings.</inlineHelpText>
        <label>Shipping Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__ShippingTax__c</fullName>
        <description>Usually a hidden field - updated by GetTax and used to calculate total sales tax</description>
        <inlineHelpText>Sales Tax on Shipping and Handling</inlineHelpText>
        <label>ShippingTax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__Shipping_County__c</fullName>
        <formula>Account.AVA_SFCORE__Shipping_County__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>County for Shipping Address</inlineHelpText>
        <label>Shipping County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__Shipping__c</fullName>
        <inlineHelpText>Shipping and Handling amount</inlineHelpText>
        <label>Shipping and Handling</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__Tax_Date__c</fullName>
        <inlineHelpText>If this field has a date entered, the sales tax calculation will use the rates that were applicable on the tax Date, else the rates that are effective as of the quote date are used.</inlineHelpText>
        <label>Tax Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__Tax_Now_Status__c</fullName>
        <inlineHelpText>&apos;Not Calculated&apos; = Sales Tax Not Calculated
&apos;Finalized&apos; = Opportunity is Finalized and May Not Be Changed
&apos;Sales Tax Not Current&apos; = Sales tax is not calc. currently
&apos;Sales Tax Current&apos; = Sales Tax Calculated &amp; Up To Date

Field Value Cannot Be Edited</inlineHelpText>
        <label>Tax Now Status</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__Total__c</fullName>
        <formula>Amount  +   AVA_SFCORE__Shipping__c +  AVA_SFCORE__Sales_Tax__c  +  AVA_SFCORE__ShippingTax__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Order Total, including S&amp;H and Sales Tax</inlineHelpText>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__VAT_No__c</fullName>
        <inlineHelpText>Buyer&apos;s Vat No</inlineHelpText>
        <label>VAT No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVA_SFCORE__request__c</fullName>
        <label>Invoice Messaging</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>(Account.Auto_Account_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <label>Account Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active_Bidder__c</fullName>
        <label>Active Bidder</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Project_Details__c</fullName>
        <label>Additional Project Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alternate_Bid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field should be used to flag duplicate Opportunities. Records that are checked can be excluded from reports</description>
        <inlineHelpText>This field should be used to flag duplicate Opportunities. Records that are checked can be excluded from reports</inlineHelpText>
        <label>Alternate Bid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_Report__c</fullName>
        <formula>IF(Alternate_Bid__c = True,0,IF($RecordType.DeveloperName = &quot;Latin_America&quot;,IF(Product_Line_Items__c = 0, Amount,Total_Selling_Price__c),Amount))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount (Report)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <inlineHelpText>What is the Approval Status currently?</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Turnover Approved</fullName>
                </value>
                <value>
                    <fullName>Estimate Approved</fullName>
                </value>
                <value>
                    <fullName>Submitted - Turnover</fullName>
                </value>
                <value>
                    <fullName>Submitted - Estimate</fullName>
                </value>
                <value>
                    <fullName>Submitted - Sell Price</fullName>
                </value>
                <value>
                    <fullName>Sell Price Approved</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                    <isActive>false</isActive>
                    <label>Submitted</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_GM__c</fullName>
        <label>GM $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Discount_Percent__c</fullName>
        <label>Discount Percent</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Architect_Owner__c</fullName>
        <label>Architect Owner</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Architect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Architect</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Architect)</relationshipLabel>
        <relationshipName>Opportunities9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Auto_Number__c</fullName>
        <displayFormat>{0000000}</displayFormat>
        <externalId>true</externalId>
        <label>Auto Number (Do Not Use)</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Awarded_Contractor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Awarded Contractor (To Be Mapped)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Awarded Contractor)</relationshipLabel>
        <relationshipName>OpportunitiesJeL3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Basis_of_Design_BOD__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this field checked, a workflow behind the scenes notifies DALA Manager.</description>
        <label>Daikin BOD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bid_Date__c</fullName>
        <description>Date of the Bid</description>
        <inlineHelpText>Date of the Bid</inlineHelpText>
        <label>Bid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bidder_Rollup__c</fullName>
        <label>Bidder Rollup</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_Line_1__c</fullName>
        <description>Whenever an Opportunity with the Record type of &apos;North America Apttus&apos; is created or edited, it should copy the Primary Billing Address fields from the Account over to the Opportunity.</description>
        <inlineHelpText>Whenever an Opportunity with the Record type of &apos;North America Apttus&apos; is created or edited, it should copy the Primary Billing Address fields from the Account over to the Opportunity.</inlineHelpText>
        <label>Bill To Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_Line_2__c</fullName>
        <description>Whenever an Opportunity with the Record type of &apos;North America Apttus&apos; is created or edited, it should copy the Primary Billing Address fields from the Account over to the Opportunity.</description>
        <inlineHelpText>Whenever an Opportunity with the Record type of &apos;North America Apttus&apos; is created or edited, it should copy the Primary Billing Address fields from the Account over to the Opportunity.</inlineHelpText>
        <label>Bill To Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_Line_3__c</fullName>
        <description>Whenever an Opportunity with the Record type of &apos;North America Apttus&apos; is created or edited, it should copy the Primary Billing Address fields from the Account over to the Opportunity.</description>
        <inlineHelpText>Whenever an Opportunity with the Record type of &apos;North America Apttus&apos; is created or edited, it should copy the Primary Billing Address fields from the Account over to the Opportunity.</inlineHelpText>
        <label>Bill To Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_Name__c</fullName>
        <description>Whenever an Opportunity with the Record type of &apos;North America Apttus&apos; is created or edited, it should copy the Primary Billing Address fields from the Account over to the Opportunity.</description>
        <inlineHelpText>Whenever an Opportunity with the Record type of &apos;North America Apttus&apos; is created or edited, it should copy the Primary Billing Address fields from the Account over to the Opportunity.</inlineHelpText>
        <label>Bill To Address Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_City__c</fullName>
        <description>Whenever an Opportunity with the Record type of &apos;North America Apttus&apos; is created or edited, it should copy the Primary Billing Address fields from the Account over to the Opportunity.</description>
        <inlineHelpText>Whenever an Opportunity with the Record type of &apos;North America Apttus&apos; is created or edited, it should copy the Primary Billing Address fields from the Account over to the Opportunity.</inlineHelpText>
        <label>Bill To City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Country__c</fullName>
        <description>Whenever an Opportunity with the Record type of &apos;North America Apttus&apos; is created or edited, it should copy the Primary Billing Address fields from the Account over to the Opportunity.</description>
        <inlineHelpText>Whenever an Opportunity with the Record type of &apos;North America Apttus&apos; is created or edited, it should copy the Primary Billing Address fields from the Account over to the Opportunity.</inlineHelpText>
        <label>Bill To Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_State_Province__c</fullName>
        <description>Whenever an Opportunity with the Record type of &apos;North America Apttus&apos; is created or edited, it should copy the Primary Billing Address fields from the Account over to the Opportunity.</description>
        <inlineHelpText>Whenever an Opportunity with the Record type of &apos;North America Apttus&apos; is created or edited, it should copy the Primary Billing Address fields from the Account over to the Opportunity.</inlineHelpText>
        <label>Bill To State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Zip_Postal_Code__c</fullName>
        <description>Whenever an Opportunity with the Record type of &apos;North America Apttus&apos; is created or edited, it should copy the Primary Billing Address fields from the Account over to the Opportunity.</description>
        <inlineHelpText>Whenever an Opportunity with the Record type of &apos;North America Apttus&apos; is created or edited, it should copy the Primary Billing Address fields from the Account over to the Opportunity.</inlineHelpText>
        <label>Bill To Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Terms__c</fullName>
        <label>Billing Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Billed 100% upon acceptance</fullName>
                </value>
                <value>
                    <fullName>Billed in full upon completion</fullName>
                </value>
                <value>
                    <fullName>Billed per accepted milestones</fullName>
                </value>
                <value>
                    <fullName>MA Annually</fullName>
                </value>
                <value>
                    <fullName>MA monthly</fullName>
                </value>
                <value>
                    <fullName>MA quarterly</fullName>
                </value>
                <value>
                    <fullName>MA semi-annually</fullName>
                </value>
                <value>
                    <fullName>Per accepted schedule of values (SOV)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Briefly_Describe_your_Strategy_to_Win__c</fullName>
        <inlineHelpText>Briefly Describe your Strategy to Win</inlineHelpText>
        <label>Briefly Describe your Strategy to Win</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Budget_Proposal_Date__c</fullName>
        <description>Date proposal was submitted to customer</description>
        <inlineHelpText>Date proposal was submitted to customer</inlineHelpText>
        <label>Budget Proposal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Building_Status__c</fullName>
        <description>Copied from the Lead - Shipped Equipment Info</description>
        <inlineHelpText>Work that the equipment was provided for</inlineHelpText>
        <label>Building Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_Discount__c</fullName>
        <description>Bulk Discount $</description>
        <label>Bulk Discount $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bulk_Exchange_Rate__c</fullName>
        <defaultValue>1.0</defaultValue>
        <description>Bulk Item Exchange Rate</description>
        <label>Bulk Exchange Rate</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bulk_Freight__c</fullName>
        <description>Bulk Freight</description>
        <label>Bulk Freight $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bulk_Tax__c</fullName>
        <description>Bulk Tax $</description>
        <label>Bulk Tax $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bypass__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to skip validation rules while uploading or updating records into Salesforce. After updating records please uncheck the field.</description>
        <inlineHelpText>Administrator use only. To know more please read field description.
Do not use this field anywhere including reports.</inlineHelpText>
        <label>Bypass</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAP__c</fullName>
        <description>This field needs a validation rule on it so when the Line of Business = “Retrofit/Updates” it has to be updated. If it&apos;s a CAP a CAP form can be completed (internal inspection).</description>
        <inlineHelpText>Is this a CAP (Chiller Assurance Program)?</inlineHelpText>
        <label>CAP</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Line_of_Business__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPN_Number__c</fullName>
        <description>CPN Number</description>
        <inlineHelpText>CPN Number. Editable by National Accounts only</inlineHelpText>
        <label>CPN #</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPN_State__c</fullName>
        <description>CPN State</description>
        <inlineHelpText>CPN State. Editable by National Accounts only</inlineHelpText>
        <label>CPN State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>ND</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPN__c</fullName>
        <formula>IF(
AND(
NOT(ISBLANK(CPN_Number__c)),
ISPICKVAL(Gov_t_Healthcare_GPO__c,&quot;OMNI Private&quot;)),
&quot;OP143127-&quot; + TEXT(CPN_State__c) + &quot;-&quot; + CPN_Number__c,

IF(
NOT(ISBLANK(CPN_Number__c)),
&quot;R150505-&quot; + TEXT(CPN_State__c) + &quot;-&quot; + CPN_Number__c,NULL))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CPN Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Amt__c</fullName>
        <formula>IF((ISPICKVAL(StageName, &quot;Closed Won&quot;)),Amount,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Won Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Codestring__c</fullName>
        <description>Copied over from the Lead - Shipped Equipment</description>
        <inlineHelpText>Codestring for the shipped equipment</inlineHelpText>
        <label>Codestring</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compelling_Event__c</fullName>
        <inlineHelpText>Describe the Compelling event and how it is impacting the customer’s business</inlineHelpText>
        <label>Compelling Event:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Consulting_Engineer_Owner__c</fullName>
        <label>Consulting Engineer Owner</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consulting_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consulting Engineer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Consulting Engineer)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consulting_Probability__c</fullName>
        <description>Probability of Consulting</description>
        <label>Consulting Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
</CustomObject>